# sphinx-doxygen-docker

./: .gitlab-ci.yml  README.md  make_shell.sh  pyproject.toml  run_test.sh  tool.py
clang12/: Dockerfile
clang13/: Dockerfile
clang14/: Dockerfile
sphinx-docker/: Dockerfile
sphinx-doxygen/: Dockerfile
test/: .gitignore  Doxyfile  pyproject.toml  run_test.sh
test/include/: .clang-format  Adder.h
test/sphinx/: acknowledgement.rst  conf.py  index.rst  test.rst
