[tool.poetry]
name = "sphinx-doxygen-docker"
version = "0.1.0"
description = ""
authors = ["Kenta Kabashima <kenta_program37@hotmail.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
