[tool.poetry]
name = "sphinx-doxygen-docker"
version = "0.1.0"
description = ""
authors = ["Kenta Kabashima <kenta_program37@hotmail.co.jp>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
click = "^8.4.1"

[tool.poetry.group.dev.dependencies]
black = "^26.5.1"
isort = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
